setup styles for base layout and typography

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,3 +12,7 @@
 @import 'utilities/typography';
 
 @import 'framework/overrides';
+
+@import 'views/layout';
+@import 'views/user-info';
+@import 'views/side-nav';
