--- a/app/styles/framework/_variables.scss
+++ b/app/styles/framework/_variables.scss
@@ -30,7 +30,7 @@
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-// $body-bg:               #fff !default;
+$body-bg:               $beige-color;
 //** Global text color on `<body>`.
 // $text-color:            $gray-dark !default;
 
@@ -44,7 +44,7 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-// $font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-family-sans-serif:  $ff-sans-serif;
 // $font-family-serif:       Georgia, "Times New Roman", Times, serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 // $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
