--- a/app/styles/settings/_variables.scss
+++ b/app/styles/settings/_variables.scss
@@ -4,6 +4,14 @@ $white-color: #ffffff;
 $black-color: #000000;
 $beige-color: #f7f7f7;
 
+$light-gray-color: #edecec;
+
+$gray-1-color: #e3e3e4;
+$gray-2-color: #8a8e98;
+$gray-3-color: #848688;
+
+$red-color: #d35933;
+
 $dark-gray-1-color: #3e3f41;
 $dark-gray-2-color: #2f2f31;
 
@@ -19,7 +27,7 @@ $fs-3: 16px;
 $fs-4: 24px;
 
 $fw-light: 100;
-$fw-normal: 400;
+$fw-normal: 500;
 $fw-bold: 800;
 
 $ff-sans-serif: 'Fira Sans', Helvetica, sans-serif;
